; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-bson.c_lbinary.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-bson.c_lbinary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BSON_BINARY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lbinary to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lbinary(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @lua_settop(i32* %4, i32 1)
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @luaL_buffinit(i32* %6, i32* %3)
  %8 = call i32 @luaL_addchar(i32* %3, i32 0)
  %9 = load i32, i32* @BSON_BINARY, align 4
  %10 = call i32 @luaL_addchar(i32* %3, i32 %9)
  %11 = call i32 @luaL_addchar(i32* %3, i32 0)
  %12 = call i32 @luaL_addvalue(i32* %3)
  %13 = call i32 @luaL_pushresult(i32* %3)
  ret i32 1
}

declare dso_local i32 @lua_settop(i32*, i32) #1

declare dso_local i32 @luaL_buffinit(i32*, i32*) #1

declare dso_local i32 @luaL_addchar(i32*, i32) #1

declare dso_local i32 @luaL_addvalue(i32*) #1

declare dso_local i32 @luaL_pushresult(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
